[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main/Menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.5
margin_top = -20.0
margin_right = 21.5
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatButton" type="Button" parent="Buttons"]
margin_right = 43.0
margin_bottom = 20.0
text = "Stats"

[node name="Play" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 43.0
margin_bottom = 44.0
text = "Play"

[node name="Stats" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -25.0
margin_right = 48.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turrets" type="Label" parent="Stats"]
margin_right = 96.0
margin_bottom = 14.0
text = "Turrets Slain: 0"

[node name="Melee" type="Label" parent="Stats"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 32.0
text = "Melee Slain: 0"

[node name="Ranged" type="Label" parent="Stats"]
margin_top = 36.0
margin_right = 96.0
margin_bottom = 50.0
text = "Ranged Slain: 0"

[node name="Reset" type="Button" parent="Stats"]
margin_right = 12.0
margin_bottom = 20.0
text = "Reset"

[node name="Back" type="Button" parent="Stats"]
margin_right = 12.0
margin_bottom = 20.0
text = "Back"

[connection signal="pressed" from="Buttons/StatButton" to="." method="_on_StatButton_pressed"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Stats/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Stats/Back" to="." method="_on_Back_pressed"]
